# EngramGrok

./: .clinerules  .cursorrules  .dockerignore  .engramignore  .gitattributes  .gitignore  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  AGENT_SELF_MODEL.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_GAP_WAKE_UP_CONCEPT_MAPPING.md  Dockerfile  FIRST_RUN.md  GROK_INTEGRATION.md  HOW_WE_ACTUALLY_USE_THIS_IN_2026.md  IMPLEMENTATION-PLAN.md  INTEGRATION_RULES.md  MANIFESTO.md  PATENT-NOTICE.md  PHILOSOPHY.md  README.md  SECURITY.md  SKILLS.md  dashboard.html  glama.json  sem_search.rs  test_ast.rs  watchdog.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
.grok/: config.toml
.grok/skills/engram-goal/: SKILL.md
.grok/skills/engram-session-end/: SKILL.md
.grok/skills/engram-wake-up/: SKILL.md
.grok/skills/engram-working-memory/: SKILL.md
benches/: compare.py
crates/engram-ast/: Cargo.toml
crates/engram-ast/src/: lib.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-core/: Cargo.toml  build.rs
crates/engram-core/benches/: query_bench.rs
crates/engram-core/examples/: search.rs  test_scar_manually.rs
crates/engram-core/schema/: provlog.capnp
crates/engram-core/src/: ast_extract.rs  backend.rs  encode.rs  genesis.rs  index.rs  lib.rs  mmap.rs  ops.rs  storage.rs  types.rs
crates/engram-gpu/: Cargo.toml  build.rs
crates/engram-gpu/examples/: optix_smoke.rs  poincare_vs_cosine.rs
crates/engram-gpu/kernels/: arkade_8k.cu  arkade_8k.hip  arkade_8k.metal  bvh_traverse.cu  int8_raytracer.wgsl  optix_ah.cu  optix_intersect.cu  optix_ms.cu  optix_rg.cu
crates/engram-gpu/src/: backend.rs  bvh.rs  cuda_dispatch.rs  lib.rs  metal_backend.rs  optix_host.cpp  optix_pipeline.rs  quant.rs  rocm_backend.rs  wgpu_backend.rs
crates/engram-server/: Cargo.toml  build.rs
crates/engram-server/src/: daemon.rs  genesis.json  ki_hijacker.rs  main.rs  mcp.rs  mcp_lock.rs  profile.rs  scout.rs  scout_supervisor.rs  serve.rs  store.rs  watchdog.rs
crates/engram-server/web/: chat.css  chat.js  index.html
design/: ENGRAM_CONSOLIDATION_PLAN.md  MVP_GAP_CLOSURE_PLAN.md  agent_memory_mvp_plan.md
design/processes/monitor/: manifold-health.toml  subvisor.toml
design/processes/operator/: momentum-query.toml
design/processes/process/: session-end.toml
design/processes/ritual/: wake-up.toml
docs/: 2026-06_Substrate_CS_Gap_Closure_Roadmap.md  AGENTIC_FIRST_LONG_SLEEP_SUBSTRATE.md  AGENT_MEMORY_CONTRACT.md  DEPLOYMENT_MODES.md  Engram_Build_Launch_Configuration.md  GEOMETRIC_MEMORY.md  GITHUB_MVP_PREP_PLAN.md  GROK_BUILD_MEMORY.md  Item2_Revised_Expanded_Scope.md  LAWFULNESS_VERIFICATION_PRIMITIVES.md  LONG_SLEEP_WAKEUP_PROTOCOL.md  MCP_TOOLS_REFERENCE.md  OptiX_TUI_Update_Plan.md  RITUALS.md  SESSION_END_2026-05-27.md  architecture.md  conv_arc_engram_roadmap_autonomous_execution.md  conv_arc_engram_self_verification_roadmap.md  conv_task_agent_self_model_reasoning_trace_continuation.md  conv_task_elevate_praxis_to_operational_protocols.md  conv_task_engram_development_checkpoints.md  conv_task_harden_long_sleep_wakeup_protocol.md  conv_task_implement_lawfulness_verification_primitives.md  conv_task_leg_primitive_functional_audit.md  conv_task_spatial_impact_ritual_hardening.md  ego_intent_logophysics_memory_palace_framework.md  grokbuild_public_mvp_roadmap.md  item1.5_closeout_draft.md  item1.5_closeout_records.md  item1.5_progress.md  item1.5_reingestion_policy.md  item1_ego_goal_stack_design.md  long_sleep_verification_suite_design.md  memory_lifecycle.md  phase_c_buffer_companion_patch.md  phase_c_p1_architect_patch.md  post_rebuild_formal_logging_checklist.md  praxis_as_protocol_spec.md  real_usage_testing_guide.md  reasoning_functors_as_praxis_extension.md  (+1 more)
docs/examples/: full_ritual_cycle.md  item1_goal_trace_examples.md  sub_agent_governance.md
docs/skills/: README.md  engram-session-end.md  engram-thought-tiles.md  engram-wake-up.md  engram-working-memory.md
docs/wiki/: how-engram-replaces-vector-db.md  ide-integration.md  physics-of-vsa-in-rust.md
examples/: hello-engram-agent.py  mcp_client.py  ritual_verify.md  spatial_geosphere_demo.py
extensions/vscode/: package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
integrations/: README.md  mcp.engram.template.json  scout_daemon.py
integrations/antigravity/: mcp_config.json
integrations/claude-desktop/: claude_desktop_config.json
integrations/codex/: README.md
integrations/cursor/: mcp.json
integrations/grok-build/: mcp.json
integrations/python/: engram_client.py
integrations/system-prompts/: README.md
integrations/workflows/: session_end.md  wake_up.md  working_memory.md
onnx_microservice/: Dockerfile  requirements.txt  server.py
processes/harness/: spatial-recon.toml
processes/monitor/: subvisor.toml
processes/ritual/: nrem-consolidation.toml  wake-up.toml
scripts/: bootstrap_spatial.sh  check_spatial_status.sh  engram-grok  item1.5_bootstrap_commands.md  launch-leg-browser-review.sh  leg
tools/leg-browser/: README.md  index.html  test-harness.md
tools/test-harness/: README.md
tools/test-harness/python/: mcp_test_client.py
tools/test-harness/results/: harness-20260601T021959UTC-1135150-engram-health.json  harness-20260601T024615UTC-1150105-engram-health.json  harness-20260601T024620UTC-1150274-engram-transport-lifetime.json  harness-20260601T024627UTC-1150466-engram-health.json  harness-20260601T040425UTC-1196630-engram-all.json  harness-20260601T043450UTC-1224923-engram-all.json  harness-20260601T142940UTC-1878495-engram-all.json  harness-20260601T230601UTC-2274719-engram-health.json  harness-20260601T230607UTC-2274938-engram-transport-lifetime.json  harness-20260601T230617UTC-2275184-engram-lawfulness-metric.json  harness-20260601T231814UTC-2283078-engram-health.json  harness-20260601T231818UTC-2283228-engram-transport-lifetime.json  (+17 more)
(+31 files in other folders)
