[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-ast",
    "crates/engram-gpu",
    "crates/engram-cli",
    "crates/engram-server",
]

[workspace.package]
version     = "0.4.0"
edition     = "2021"
authors     = ["Aric Goodman <StaticRoosterMedia@gmail.com>", "Static Rooster Media <StaticRoosterMedia@gmail.com>"]
license     = "AGPL-3.0-only"
repository  = "https://github.com/StaticRoosterMedia/engram"
homepage    = "https://engram.dev"
description = "A responsive local vector database and associative memory framework built for AI agents."
keywords    = ["ai", "memory", "agent", "vector-db", "mcp"]
categories  = ["science", "data-structures"]

[workspace.dependencies]
# Core math
num-complex  = { version = "0.4", features = ["serde"] }
blake3       = "1"
bytemuck     = { version = "1", features = ["derive"] }
rayon        = "1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Async runtime
tokio        = { version = "1", features = ["full"] }
axum         = "0.8"
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow  = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# CLI
clap        = { version = "4", features = ["derive", "env"] }
shellexpand = "3"
walkdir     = "2"
libc         = "0.2"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1

