[package]
name        = "engram-cli"
description = "CLI tool for Engram — remember, recall, forget"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "engram-cli"
path = "src/main.rs"

[dependencies]
engram-core = { path = "../engram-core", features = ["ast"] }
clap        = { workspace = true }
serde_json  = { workspace = true }
anyhow       = { workspace = true }
shellexpand  = { workspace = true }
num-complex  = { workspace = true }
walkdir = "2.5.0"
syn   = { version = "2", features = ["full", "visit"] }
quote = "1"
