[package]
name        = "engram-core"
description = "VSA-based persistent geometric memory for AI agents — core types and operations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
rayon-backend = []     # Enable Rayon parallel scan (always available on CPU)
universal-ast = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-java",
]

[dependencies]

num-complex  = { workspace = true }
blake3       = { workspace = true }
bytemuck     = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
tracing      = { workspace = true }
streaming-iterator = "0.1"


libc         = "0.2"   # O_DIRECT flag for direct I/O reads

# Universal AST extraction — optional, enabled via `universal-ast`
tree-sitter            = { version = "0.24", optional = true }
tree-sitter-rust       = { version = "0.24", optional = true }
tree-sitter-python     = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go         = { version = "0.23", optional = true }
tree-sitter-c          = { version = "0.23", optional = true }
tree-sitter-cpp        = { version = "0.23", optional = true }
tree-sitter-java       = { version = "0.23", optional = true }

