[package]
name        = "engram-core"
description = "VSA-based persistent geometric memory for AI agents — core types and operations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
rayon-backend = []     # Enable Rayon parallel scan (always available on CPU)
bvh = []               # Enable O(log N) LBVH index (CPU, no GPU required)
[dependencies]

num-complex  = { workspace = true }
blake3       = { workspace = true }
bytemuck     = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
tracing      = { workspace = true }
streaming-iterator = "0.1"

libc         = "0.2"   # O_DIRECT flag for direct I/O reads
capnp        = "0.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3"

[build-dependencies]
capnpc = "0.19"

[[bench]]
name    = "query_bench"
harness = false

[[bin]]
name = "gen_shadow_basis"
path = "src/bin/gen_shadow_basis.rs"
