[package]
name        = "engram-gpu"
description = "GPU backends for Engram — CUDA LBVH O(log N) K-NN + WebGPU INT8 Poincaré hyperbolic search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default      = []
# These legacy flags are still accepted but auto-detection via build.rs is the
# preferred path — just `cargo install engram-server` and the best backend is chosen.
cuda-kernels = []   # kept for explicit override: --features cuda-kernels
rocm-kernels = []   # kept for explicit override: --features rocm-kernels
wgpu-backend = []   # WGPU fallback

[dependencies]
engram-core  = { path = "../engram-core", default-features = false }
num-complex  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
shellexpand  = { workspace = true }
libc         = { workspace = true }
rayon        = { workspace = true }
# wgpu is always compiled — it's the cross-platform fallback for any GPU without CUDA/ROCm/Metal.
# On machines with CUDA or ROCm, the GPU kernel path is preferred at runtime.
wgpu     = "22"
pollster = "0.3"   # sync executor for wgpu init/readback
bytemuck = "1"     # safe &[u32] ↔ &[u8] casts for GPU buffers

[build-dependencies]
# cc is used to compile the CUDA kernels when cuda-kernels feature is enabled
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
objc = "0.2.7"
