[package]
name        = "engram-server"
description = "MCP + REST server for Engram — persistent geometric memory for AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[features]
default = []
# Enable GPU-accelerated BVH K-NN backend + CUDA cosine kernels
cuda = ["dep:engram-gpu", "engram-gpu/cuda-kernels"]

[dependencies]
engram-core  = { path = "../engram-core" }
engram-gpu   = { path = "../engram-gpu", optional = true }

# Async runtime
tokio        = { workspace = true }

# Web / REST server (Phase 3b)
axum         = { workspace = true }
tower-http   = { workspace = true }

# JSON (MCP protocol is JSON-RPC 2.0)
serde        = { workspace = true }
serde_json   = { workspace = true }

# CLI flags
clap         = { workspace = true }
shellexpand  = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
flume = "0.12.0"
blake3  = { workspace = true }
toml    = "0.8"
bincode = "1"
