[package]
name        = "engram-server"
description = "MCP + REST server for Engram — persistent geometric memory for AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[features]
default = []
# Legacy override flags — seldom needed since build.rs auto-detects the best backend.
# Use these only to force a specific backend on a multi-GPU machine:
cuda  = ["engram-gpu/cuda-kernels", "engram-gpu/device_residency"]   # force CUDA + device_residency (cuFile/GPUDirect NVMe->GPU for hot; Tier 3 for NVMe-GPU design)
rocm  = ["engram-gpu/rocm-kernels"]   # force ROCm even if CUDA is also present
metal = []                             # macOS Metal: auto-detected by build.rs; kept for compat

[dependencies]
engram-core = { path = "../engram-core", features = ["async-io"] }
engram-ast  = { path = "../engram-ast" }
# engram-gpu is always included — build.rs auto-selects CUDA/ROCm/Metal/WebGPU/CPU.
# device_residency (direct NVMe->GPU for high_priority/hot via cuFile stubs + LegView bias today;
# full GPUDirect when nvidia-fs present) is now default so CUDA setups get the NVMe-GPU path
# compiled in (tied to the design intent). Safe no-op on non-cuda.
engram-gpu   = { path = "../engram-gpu", features = ["device_residency"] }
libc = { workspace = true }

# Async runtime
tokio        = { workspace = true }

# Web / REST server (Phase 3b)
axum         = { workspace = true }
tower-http   = { workspace = true }

# JSON (MCP protocol is JSON-RPC 2.0)
serde        = { workspace = true }
serde_json   = { workspace = true }

# CLI flags
clap         = { workspace = true }
shellexpand  = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }
reqwest   = { workspace = true }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
flume = "0.12.0"
blake3  = { workspace = true }
toml    = "0.8"
bincode = "1"
regex   = "1"
chrono  = { version = "0.4", features = ["serde"] }
bumpalo = "3.14.0"
walkdir = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(engram_backend_cuda)', 'cfg(engram_backend_metal)', 'cfg(engram_backend_rocm)', 'cfg(engram_backend_cpu)', 'cfg(engram_backend_wgpu)'] }
